frontend/src/components/blocks/ImageCards/less/video-carousel.less
@type: 'extra';
@element: 'custom';

@import (multiple, reference, optional) '../../theme.config';

.block.imagecards-videocarousel {
  .slider-wrapper {
    height: 100vh;
    @media only screen and (max-width: @largestMobileScreen) {
      height: unset;
    }

    .slick-slider {
      height: 100%;
      @media only screen and (max-width: @largestMobileScreen) {
        height: unset;
      }

      .slick-list {
        height: 100%;
        @media only screen and (max-width: @largestMobileScreen) {
          height: unset;
        }

        .slick-track {
          height: 100%;
          @media only screen and (max-width: @largestMobileScreen) {
            height: unset;
          }

          .slick-slide {
            & > div {
              height: 100%;
              @media only screen and (max-width: @largestMobileScreen) {
                height: unset;
              }
            }

            .slider-slide {
              height: 100%;
              @media only screen and (max-width: @largestMobileScreen) {
                height: unset;
                aspect-ratio: 16/9;
                width: 100vw;
              }
              

              .video-responsive {
                position: absolute;
                top: 50%;
                left: 50%;
                width: 100vh;
                min-width: 100%;
                height: 100vh;
                min-height: 100%;
                transform: translate(-50%, -50%);
                @media only screen and (max-width: @largestMobileScreen) {
                  height: unset;
                  width: 100vw;
                }

                // .ui.button {
                //   position: absolute;
                //   z-index: 2;
                //   top: 50%;
                //   left: 50%;
                //   padding: 1.25rem 0.5rem 1.25rem 1.75rem;
                //   border: 3px solid white;
                //   border-radius: 0px;
                //   transform: translate(-50%, -50%);
                //
                //   &:hover {
                //     background-color: transparent !important;
                //   }
                // }
                //
                // .placeholder-image {
                //   height: 100%;
                //
                //   img {
                //     width: 100%;
                //     height: 100%;
                //     object-fit: cover;
                //   }
                // }
              }

              .slider-footer {
                position: absolute;
                z-index: 1;
                bottom: 2em;
                left: 10%;
                display: flex;
                width: 80%;
                justify-content: space-between;

                .video-carousel-dots {
                  // background-color: red;
                  display: flex;
                  flex-direction: column-reverse;

                  .inner {
                    display: flex;
                    gap: 16px;

                    button {
                      width: 80px;
                      height: 6px;
                      border: 0px;
                      background-color: #ffffff33;
                      cursor: pointer;
                      font-size: 0;

                      &.slick-active {
                        background-color: white;
                      }
                    }
                  }
                }

                .video-slider-caption {
                  h2 {
                    width: 75%;
                    color: white !important;
                    font-size: clamp(1.875rem, 3.75vw, 3.125rem);
                    line-height: clamp(2.25rem, 3.75vw, 3.75rem);
                    text-transform: uppercase;
                  }

                  .slide-button {
                    text-align: left;

                    .ui.button {
                      .isBtn();
                      .blueLined();

                      color: white !important;
                      font-size: clamp(0.825rem, 2vw, 1.25rem) !important;

                      &:hover {
                        color: white !important;
                      }
                    }
                  }
                }
              }

              .slider-action {
                position: absolute;
                top: calc(50% - 64px);
                left: calc(50% - 64px);
                display: flex;
              }
            }
          }
        }
      }

      .slick-dots {
        bottom: 1em;
        display: flex;
        padding-right: 4em;
        gap: 2em;
        text-align: right;

        li {
          width: 8%;
          min-width: 20px;
          max-width: 80px;
          height: unset;
          background: #ffffff66;

          button {
            height: 6px;
            padding: 0px;

            &:before {
              content: '';
            }
          }

          &.slick-active {
            background: #ffffff;
          }
        }
      }
    }
  }
}

body.view-viewview.contenttype-lrf.has-video-carousel {
  .content-area {
    padding-top: 0em;
    margin-top: 0em !important;
  }
}

body.has-toolbar {
  .slider-caption {
    padding-left: 5em !important;
  }
}

